# genai-fastapi

./: .gitignore  README.md  alembic.ini  commands.txt  pyproject.toml  usage.csv
alembic/: env.py
alembic/versions/: a4ad1210e311_create_users_and_tokens_tables.py  c9704e772cdb_create_conversation_and_message_tables.py  fec97e6314c5_initial_migration.py
building_genai_services/: main.py
building_genai_services/api/: app.py
building_genai_services/auth/: entities.py  repositories.py  router.py  schemas.py  services.py
building_genai_services/bentoml/: bento.py
building_genai_services/common/entities/: __init__.py  entities.py
building_genai_services/common/interfaces/: __init__.py
building_genai_services/common/session/: __init__.py  session.py
building_genai_services/conversations/: __init__.py  repository.py  router.py  schemas.py  services.py
building_genai_services/database/: __init__.py  database.py  entities.py
building_genai_services/database/repositories/: __init__.py  conversations.py  interfaces.py
building_genai_services/database/services/: __init__.py  conversations.py
building_genai_services/dependencies/: __init__.py  dependencies.py
building_genai_services/generate/: models.py  router.py  schemas.py  utils.py
building_genai_services/models/: __init__.py  models.py
building_genai_services/rag/: __init__.py  dependencies.py  extractor.py  repository.py  scraper.py  services.py  transform.py  upload.py
building_genai_services/routers/: __init__.py  conversations.py
building_genai_services/schemas/: __init__.py  schemas.py
building_genai_services/scraper/: __init__.py
building_genai_services/utils/: __init__.py  utils.py
streamlit/: client_upload.py
tests/: conftest.py  test_rag_transform.py
