[project]
name = "building-genai-services"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.1",
    "aiofiles>=25.1.0",
    "av>=15.1.0",
    "bentoml>=1.4.31",
    "bs4>=0.0.2",
    "diffusers>=0.36.0",
    "fastapi>=0.127.0",
    "loguru>=0.7.3",
    "pypdf>=6.5.0",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.16.2",
    "soundfile>=0.13.1",
    "streamlit>=1.50.0",
    "tiktoken>=0.12.0",
    "torch>=2.8.0",
    "transformers>=4.57.3",
    "uvicorn>=0.34.0",
]

[project.scripts]
app = "building_genai_services.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
